--- a/index.html
+++ b/index.html
@@ -8,7 +8,38 @@
     <link rel="stylesheet" href="style.css">
     <title>Путешествия по России</title>
 </head>
-<body>
-    
+<body class="page">
+  <div class="container">
+    <header class="header">
+      <img
+        class="header__logo"
+        src="./images/header-logo.svg"
+        alt="Лого Россия"
+      >
+      <a class="header__lang-link" href="#" target="_blank">Ru</a>
+      <a class="header__lang-link" href="#" target="_blank">En</a>
+    </header>
+        
+    <section class="lead">
+      <h1 class="lead__title">Путешествия по России</h1>
+      <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+      <img
+        class="lead__image"
+        src="./images/lead-polka.jpg"
+        alt="Боковая полка в плацкарте"
+      >
+      <p class="lead__caption">ваша полка — верхняя</p>
+    </section>
+    <footer class="footer">
+      <ul class="footer__links">
+        <li><a href="#" class="footer__link" target="_blank">Карты</a></li>
+        <li><a href="#" class="footer__link" target="_blank">Погода</a></li>
+        <li><a href="#" class="footer__link" target="_blank">Расписание</a></li>
+        <li><a href="#" class="footer__link" target="_blank">Календарь</a></li>
+        <li><a href="#" class="footer__link" target="_blank">Путешествия</a></li>
+      </ul>
+      <p class="footer__copyright">&copy; 2022. Андрей Королёв</p>
+    </footer>
+  </div>
 </body>
 </html>
