Адаптировал блок photo-grid

--- a/index.html
+++ b/index.html
@@ -50,62 +50,62 @@
 
       <section class="photo-grid">
         <img
-          class="photo-grid"
+          class="photo-grid__item"
           src="./images/photo-grid-train.jpg"
           alt="Вид из окна поезда"
         >
         <img
-          class="photo-grid"
+          class="photo-grid__item"
           src="./images/photo-grid-atharva-tulsi.jpg"
           alt="Горные вершины"
         >
         <img
-          class="photo-grid"
+          class="photo-grid__item"
           src="./images/photo-grid-tuman.jpg"
           alt="Собака в тумане"
         >
         <img
-          class="photo-grid"
+          class="photo-grid__item"
           src="./images/photo-grid-sochi.jpg"
           alt="Леса в Сочи"
         >
         <img
-          class="photo-grid"
+          class="photo-grid__item"
           src="./images/photo-grid-arisa.jpg"
           alt="Лёд на байкале"
         >
         <img
-          class="photo-grid"
+          class="photo-grid__item"
           src="./images/photo-grid-baikal.jpg"
           alt="Летний байкал"
         >
         <img
-          class="photo-grid"
+          class="photo-grid__item"
           src="./images/photo-grid-elbrus.jpg"
           alt="Эльбрус"
         >
         <img
-          class="photo-grid"
+          class="photo-grid__item"
           src="./images/photo-grid-kondratiev.jpg"
           alt="Дорожный знак"
         >
         <img
-          class="photo-grid"
+          class="photo-grid__item"
           src="./images/photo-grid-kamchatka-1.jpg"
           alt="Камчатка"
         >
         <img
-          class="photo-grid"
+          class="photo-grid__item"
           src="./images/photo-grid-kamchatka-2.jpg"
           alt="Камчатка"
         >
         <img
-          class="photo-grid"
+          class="photo-grid__item"
           src="./images/photo-grid-baikal-2.jpg"
           alt="Байкал"
         >
         <img
-          class="photo-grid"
+          class="photo-grid__item"
           src="./images/photo-grid-ergaki.jpg"
           alt="Ергаки"
         >
@@ -194,6 +194,7 @@
           src="./images/cover-trains.jpg"
           alt="Железнодорожная магистраль"
         >
+        <div class="cover__overlay"></div>
         <h2 class="cover__title">До Байкала «на собаках»</h2>
         <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
       </section>
@@ -214,7 +215,7 @@
         </ul>
         <p class="footer__copyright">&copy; 2022. Андрей Королёв</p>
       </footer>
-      
+
     </div>
   </body>
 </html>
