--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Андрей Королёв" />
-    <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Андрей Королёв">
+    <link rel="stylesheet" href="style.css">
     <title>Путешествия по России</title>
   </head>
 
@@ -15,7 +15,7 @@
         class="header__logo"
         src="./images/header-logo.svg"
         alt="Лого Россия"
-      />
+      >
       <ul class="header__lang-selection">
         <li>
           <a class="header__lang-link header__lang-link_active" href="#">Ru</a>
@@ -33,7 +33,7 @@
         class="lead__image"
         src="./images/lead-polka.jpg"
         alt="Боковая полка в плацкарте"
-      />
+      >
       <p class="lead__caption">ваша полка — верхняя</p>
     </section>
 
@@ -63,68 +63,68 @@
         <li class="intro__list-item">Аэропортов 241</li>
       </ul>
     </section>
-<!--
+
     <section class="photo-grid">
       <img
         class="photo-grid__item"
         src="./images/photo-grid-train.jpg"
         alt="Вид из окна поезда"
-      />
+      >
       <img
         class="photo-grid__item"
         src="./images/photo-grid-atharva-tulsi.jpg"
         alt="Горные вершины"
-      />
+      >
       <img
         class="photo-grid__item"
         src="./images/photo-grid-tuman.jpg"
         alt="Собака в тумане"
-      />
+      >
       <img
         class="photo-grid__item"
         src="./images/photo-grid-sochi.jpg"
         alt="Леса в Сочи"
-      />
+      >
       <img
         class="photo-grid__item"
         src="./images/photo-grid-arisa.jpg"
         alt="Лёд на байкале"
-      />
+      >
       <img
         class="photo-grid__item"
         src="./images/photo-grid-baikal.jpg"
         alt="Летний байкал"
-      />
+      >
       <img
         class="photo-grid__item"
         src="./images/photo-grid-elbrus.jpg"
         alt="Эльбрус"
-      />
+      >
       <img
         class="photo-grid__item"
         src="./images/photo-grid-kondratiev.jpg"
         alt="Дорожный знак"
-      />
+      >
       <img
         class="photo-grid__item"
         src="./images/photo-grid-kamchatka-1.jpg"
         alt="Камчатка"
-      />
+      >
       <img
         class="photo-grid__item"
         src="./images/photo-grid-kamchatka-2.jpg"
         alt="Камчатка"
-      />
+      >
       <img
         class="photo-grid__item"
         src="./images/photo-grid-baikal-2.jpg"
         alt="Байкал"
-      />
+      >
       <img
         class="photo-grid__item"
         src="./images/photo-grid-ergaki.jpg"
         alt="Ергаки"
-      />
+      >
     </section>
 
     <section class="places">
@@ -140,7 +140,7 @@
           class="place__image"
           src="./images/place-kosa.jpg"
           alt="Куршская коса"
-        />
+        >
         <div class="place__text">
           <p class="place__paragraph">
             Здесь, посреди лесов и&nbsp;песчаных дюн, вы&nbsp;сможете увидеть
@@ -176,7 +176,7 @@
           class="place__image"
           src="./images/place-kolsky.jpg"
           alt="Кольский полуостров"
-        />
+        >
         <div class="place__text">
           <p class="place__paragraph">
             Почти весь полуостров находится за&nbsp;Полярным кругом. Саамская
@@ -208,7 +208,7 @@
             >Facebook</a
           >
         </div>
-        <img class="place__image" src="./images/place-altai.jpg" alt="Алтай" />
+        <img class="place__image" src="./images/place-altai.jpg" alt="Алтай">
         <div class="place__text">
           <p class="place__paragraph">
             Алтай&nbsp;&mdash; одно из&nbsp;красивейших мест в&nbsp;России.
@@ -243,7 +243,7 @@
           class="place__image"
           src="./images/place-winter-baikal.jpg"
           alt="Зимний Байкал"
-        />
+        >
         <div class="place__text">
           <p class="place__paragraph">
             Всем известен Байкал как крупнейшее озеро в&nbsp;мире. Многие также
@@ -273,7 +273,7 @@
           class="place__image"
           src="./images/place-karelia.jpg"
           alt="Карелия"
-        />
+        >
         <div class="place__text">
           <p class="place__paragraph">
             Сибирь заканчивается не&nbsp;на&nbsp;Урале, а&nbsp;в&nbsp;Карелии:
@@ -293,14 +293,18 @@
     </section>
 
     <section class="cover">
-      <div class="cover__overlay">
+      <a
+        class="cover__link"
+        href="https://stampsy.com/na-elektrichkakh-do-baikala"
+        target="_blank"
+      >
         <img
           class="cover__background"
           src="./images/cover-trains.jpg"
           alt="Железнодорожная магистраль"
-        />
-      </div>
-      <div class="cover__text">
+        >
+      </a>
+      <div class="cover__overlay">
         <h2 class="cover__title">
           До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;
         </h2>
@@ -310,19 +314,42 @@
         </p>
       </div>
     </section>
-  
+
     <footer class="footer">
       <ul class="footer__links">
-        <li><a href="#" class="footer__link" target="_blank">Карты</a></li>
-        <li><a href="#" class="footer__link" target="_blank">Погода</a></li>
         <li>
-          <a href="#" class="footer__link" target="_blank">Расписание</a>
+          <a href="https://yandex.ru/maps" class="footer__link" target="_blank"
+            >Карты</a
+          >
         </li>
         <li>
-          <a href="#" class="footer__link" target="_blank">Календарь</a>
+          <a
+            href="https://yandex.ru/pogoda"
+            class="footer__link"
+            target="_blank"
+            >Погода</a
+          >
         </li>
         <li>
-          <a href="#" class="footer__link" target="_blank">Путешествия</a>
+          <a href="https://rasp.yandex.ru" class="footer__link" target="_blank"
+            >Расписание</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://calendar.yandex.ru"
+            class="footer__link"
+            target="_blank"
+            >Календарь</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://travel.yandex.ru"
+            class="footer__link"
+            target="_blank"
+            >Путешествия</a
+          >
         </li>
       </ul>
       <p class="footer__copyright">&copy; 2022. Андрей Королёв</p>
