Переделал секцию Places на grid-areas

--- a/index.html
+++ b/index.html
@@ -130,18 +130,18 @@
     <section class="places">
       <div class="place">
         <h2 class="place__title">Куршская коса</h2>
+        <img
+          class="place__image"
+          src="./images/place-kosa.jpg"
+          alt="Куршская коса"
+        >
         <div class="place__website">
           <p class="place__url-heading">URL</p>
           <a class="place__link" href="http://park-kosa.ru" target="_blank"
             >park-kosa.ru</a
           >
         </div>
-        <img
-          class="place__image"
-          src="./images/place-kosa.jpg"
-          alt="Куршская коса"
-        >
-        <div class="place__text">
+        <article class="place__text">
           <p class="place__paragraph">
             Здесь, посреди лесов и&nbsp;песчаных дюн, вы&nbsp;сможете увидеть
             два водных горизонта&nbsp;&mdash; спокойного Куршского залива
@@ -158,11 +158,16 @@
             суету, окуная в&nbsp;спокойствие природы и&nbsp;запах стального,
             прохладного моря.
           </p>
-        </div>
+        </article>
       </div>
 
       <div class="place">
         <h2 class="place__title">Кольский</h2>
+        <img
+          class="place__image"
+          src="./images/place-kolsky.jpg"
+          alt="Кольский полуостров"
+        >
         <div class="place__website">
           <p class="place__url-heading">URL</p>
           <a
@@ -172,12 +177,7 @@
             >National Geographic</a
           >
         </div>
-        <img
-          class="place__image"
-          src="./images/place-kolsky.jpg"
-          alt="Кольский полуостров"
-        >
-        <div class="place__text">
+        <article class="place__text">
           <p class="place__paragraph">
             Почти весь полуостров находится за&nbsp;Полярным кругом. Саамская
             тундра, от&nbsp;которой на&nbsp;юг&nbsp;&mdash; тайга,
@@ -194,11 +194,12 @@
             мечта увидеть северное сияние начинает сбываться с&nbsp;билетом
             в&nbsp;Мурманск.
           </p>
-        </div>
+        </article>
       </div>
 
       <div class="place">
         <h2 class="place__title">Алтай</h2>
+        <img class="place__image" src="./images/place-altai.jpg" alt="Алтай">
         <div class="place__website">
           <p class="place__url-heading">URL</p>
           <a
@@ -208,8 +209,7 @@
             >Facebook</a
           >
         </div>
-        <img class="place__image" src="./images/place-altai.jpg" alt="Алтай">
-        <div class="place__text">
+        <article class="place__text">
           <p class="place__paragraph">
             Алтай&nbsp;&mdash; одно из&nbsp;красивейших мест в&nbsp;России.
             В&nbsp;первую очередь из-за гор: если ехать вдоль хребта,
@@ -225,11 +225,16 @@
             орлы, а&nbsp;на&nbsp;равнинах пасутся косули. И&nbsp;знаменитые
             манулы&nbsp;&mdash; тоже обитатели Алтайского края.
           </p>
-        </div>
+        </article>
       </div>
 
       <div class="place">
         <h2 class="place__title">Зимний Байкал</h2>
+        <img
+          class="place__image"
+          src="./images/place-winter-baikal.jpg"
+          alt="Зимний Байкал"
+        >
         <div class="place__website">
           <p class="place__url-heading">URL</p>
           <a
@@ -239,12 +244,7 @@
             >https://vk.com/baikalmile</a
           >
         </div>
-        <img
-          class="place__image"
-          src="./images/place-winter-baikal.jpg"
-          alt="Зимний Байкал"
-        >
-        <div class="place__text">
+        <article class="place__text">
           <p class="place__paragraph">
             Всем известен Байкал как крупнейшее озеро в&nbsp;мире. Многие также
             знают, что это самый большой источник пресной воды и&nbsp;одно из
@@ -258,23 +258,23 @@
             года на&nbsp;фестивале &laquo;Байкальская миля&raquo; был поставлен
             мировой рекорд&nbsp;&mdash; 197.011&nbsp;км/ч.
           </p>
-        </div>
+        </article>
       </div>
 
       <div class="place">
         <h2 class="place__title">Карелия</h2>
+        <img
+          class="place__image"
+          src="./images/place-karelia.jpg"
+          alt="Карелия"
+        >
         <div class="place__website">
           <p class="place__url-heading">URL</p>
           <a class="place__link" href="http://vodlozero.ru" target="_blank"
             >http://vodlozero.ru</a
           >
         </div>
-        <img
-          class="place__image"
-          src="./images/place-karelia.jpg"
-          alt="Карелия"
-        >
-        <div class="place__text">
+        <article class="place__text">
           <p class="place__paragraph">
             Сибирь заканчивается не&nbsp;на&nbsp;Урале, а&nbsp;в&nbsp;Карелии:
             образующая тайгу сибирская лиственница не&nbsp;растёт западнее
@@ -288,7 +288,7 @@
             в&nbsp;паре метров от&nbsp;земли помечены медвежьими когтями. Чтобы
             все знали, кто тут хозяин.
           </p>
-        </div>
+        </article>
       </div>
     </section>
 
